[tool.poetry]
name = "phl-neighborhoods"
version = "0.1.0"
description = ""
authors = ["OP"]
readme = "README.md"
packages = [{include = "phl_neighborhoods"}]

[tool.poetry.dependencies]
python = "3.11.4"
Flask = "2.3.2"
requests = "2.31.0"
pandas = "2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
